--- a/molecule/ubuntu-20.04/molecule.yml
+++ b/molecule/ubuntu-20.04/molecule.yml
@@ -35,7 +35,7 @@ platforms:
     groups:
       - etcd
   - name: ${MOLECULE_INSTANCE_NAME}-2
-    box: abi/ubuntu2004
+    box: generic/ubuntu2004
     cpu: 2
     memory: 2048
     interfaces:
