--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,6 +76,7 @@
     url: "{{ item.url }}"
     dest: "{{ item.dest }}"
     checksum: "{{ item.checksum }}"
+    mode: "{{ item.mode | default('0644') }}"
     timeout: 300
   loop:
     - "{{ etcd_download }}"
