--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,6 +58,7 @@
   loop:
     - { dest: "/etc/default" }
     - { dest: "/lib/systemd/system" }
+    - { dest: "/lib/systemd/system/etcd.service.d" }
     - { dest: "/usr/local/bin" }
     - { dest: "/var/lib/etcd" }
     - { dest: "{{ etcd_cert_file | dirname }}" }
