--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -37,6 +37,7 @@ dependency:
     requirements-file: ansible-galaxy-requirements.yml
     collections-path: ${HOME}/.ansible/collections
     ignore-errors: true
+    force: false
 provisioner:
   name: ansible
   config_options:
