--- a/molecule/redhat-7/molecule.yml
+++ b/molecule/redhat-7/molecule.yml
@@ -23,42 +23,22 @@ platforms:
     box: generic/rhel7
     cpu: 2
     memory: 4096
-    interfaces:
-      - auto_config: true
-        network_name: private_network
-        type: dhcp
-    provider_options:
-      cpu_mode: "'host-model'"
-      disk_bus: "'virtio'"
-      driver: "'kvm'"
-      nested: "'true'"
-      nic_model_type: "'virtio'"
-      video_type: "'virtio'"
-      volume_cache: "'writeback'"
     provider_raw_config_args:
+      - "disk_bus = 'virtio'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "volume_cache = 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
-    groups:
-      - etcd
   - name: ${MOLECULE_INSTANCE_NAME}-2
     box: generic/rhel7
     cpu: 2
     memory: 4096
-    interfaces:
-      - auto_config: true
-        network_name: private_network
-        type: dhcp
-    provider_options:
-      cpu_mode: "'host-model'"
-      disk_bus: "'virtio'"
-      driver: "'kvm'"
-      nested: "'true'"
-      nic_model_type: "'virtio'"
-      video_type: "'virtio'"
-      volume_cache: "'writeback'"
     provider_raw_config_args:
+      - "disk_bus = 'virtio'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "volume_cache = 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
-    groups:
-      - etcd
 lint: |
   set -euo pipefail
   yamllint .
